[package]
name = "mfc"
version = "0.1.0"
edition = "2024"
description = "Convert images and videos in bulk—losslessly when possible—to save disk space."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
