[package]
name = "mfc"
version = "0.1.0"
edition = "2024"
description = "Convert images and videos in bulk—losslessly when possible—to save disk space."

[dependencies]
anyhow = "=1.0.100"
clap = { version = "=4.5.54", features = ["derive"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
